SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)

- 11/10/2004, version 1.80c: roms
	- applied patch from Christian Walther <cwalther@gmx.ch>
	- fixed some Linux bugs

- 14/09/2004, version 1.80b: roms
	- fixed HW3 support
	- fixed bug in LCD snoop range register: TI89 Titanium (patched) and V200 (patched) work.
	- fixed bug in FLASH emulation (algorithm)
	- fixed ROM size handling with TI89 Titanium & V200
	- removed copying of vector table from FLASH to RAM at startup
	- added 'go to address' in the PC log window
	- implemented 'enable/disabled' breakpoint
	- added some missing HW ports
	- fixed TI89 Titanium RAM accesses

- 28/08/2004, version 1.80a: roms
	- fixed vectors copy
	- bkpts window: can jump to bkpt address
	- code window: can jump to ROM call
	- fixed warnings
	- update stack frame when stepping
	- improved step over: don't stop at the first RTS/RTE
	- fixed disassembling of STOP instruction
	- highlight ROM call
	- fixed loading of ROM calls (load from FLASH)
	- ROM calls are sorted by name instead of by id

- 20/08/2004, version 1.79: roms
	- LCD background is less dark
	- force mem window refresh when scrolling up/down
	- no ghost in 0x400000-0x5FFFFF on TI89
	- stack frame display 1 word on 2
	- fixed step over: works on DBcc
	- PC highlight lost when scrolling: fixed
	- restart engine when clicking outside of the popup menu
	- important bug: FLINE instructions were not executed !
	- popup menu slowed down in non-restricted speed mode (fixed)
	- removed lock-ups at startup (start engine after splash screen)
	- when calc is OFF, CPU is now used at 3% instead of 100% and debugger can be launched

- 13/08/2004, version 1.78: roms
	- changed keyboard mapping to pure VTi mapping
	- added ability to load keymaps from file
	- force code window refresh when maintaining F7 key pressed
	- accept ExtendeD's V200 ROM (patched)

- 10/08/2004, version 1.77: roms