@@ -259,7 +259,7 @@ _ASBOX
 } >&5
 cat >&5 <<_CSEOF
 
-This file was extended by TiEmu $as_me 1.80-041010, which was
+This file was extended by TiEmu $as_me 1.80-041013, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -302,7 +302,7 @@ $config_commands
 
 Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
-TiEmu config.status 1.80-041010
+TiEmu config.status 1.80-041013
 configured by ./configure, generated by GNU Autoconf 2.59,
   with options \"\"
 
@@ -473,8 +473,8 @@ s,@SHELL@,/bin/sh,;t t
 s,@PATH_SEPARATOR@,:,;t t
 s,@PACKAGE_NAME@,TiEmu,;t t
 s,@PACKAGE_TARNAME@,tiemu,;t t
-s,@PACKAGE_VERSION@,1.80-041010,;t t
-s,@PACKAGE_STRING@,TiEmu 1.80-041010,;t t
+s,@PACKAGE_VERSION@,1.80-041013,;t t
+s,@PACKAGE_STRING@,TiEmu 1.80-041013,;t t
 s,@PACKAGE_BUGREPORT@,tilp-users@lists.sourceforge.net,;t t
 s,@exec_prefix@,${prefix},;t t
 s,@prefix@,/usr,;t t
@@ -504,7 +504,7 @@ s,@INSTALL_SCRIPT@,${INSTALL},;t t
 s,@INSTALL_DATA@,${INSTALL} -m 644,;t t
 s,@CYGPATH_W@,echo,;t t
 s,@PACKAGE@,tiemu,;t t
-s,@VERSION@,1.80-041010,;t t
+s,@VERSION@,1.80-041013,;t t
 s,@ACLOCAL@,${SHELL} /home/devel/tiemu_project/tiemu/missing --run aclocal-1.7,;t t
 s,@AUTOCONF@,${SHELL} /home/devel/tiemu_project/tiemu/missing --run autoconf,;t t
 s,@AUTOMAKE@,${SHELL} /home/devel/tiemu_project/tiemu/missing --run automake-1.7,;t t
@@ -925,11 +925,11 @@ t clr
 : clr
 ${ac_dA}PACKAGE_NAME${ac_dB}PACKAGE_NAME${ac_dC}"TiEmu"${ac_dD}
 ${ac_dA}PACKAGE_TARNAME${ac_dB}PACKAGE_TARNAME${ac_dC}"tiemu"${ac_dD}
-${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"1.80-041010"${ac_dD}
-${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"TiEmu 1.80-041010"${ac_dD}
+${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"1.80-041013"${ac_dD}
+${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"TiEmu 1.80-041013"${ac_dD}
 ${ac_dA}PACKAGE_BUGREPORT${ac_dB}PACKAGE_BUGREPORT${ac_dC}"tilp-users@lists.sourceforge.net"${ac_dD}
 ${ac_dA}PACKAGE${ac_dB}PACKAGE${ac_dC}"tiemu"${ac_dD}
-${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"1.80-041010"${ac_dD}
+${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"1.80-041013"${ac_dD}
 ${ac_dA}STDC_HEADERS${ac_dB}STDC_HEADERS${ac_dC}1${ac_dD}
 ${ac_dA}HAVE_SYS_TYPES_H${ac_dB}HAVE_SYS_TYPES_H${ac_dC}1${ac_dD}
 ${ac_dA}HAVE_SYS_STAT_H${ac_dB}HAVE_SYS_STAT_H${ac_dC}1${ac_dD}
@@ -1062,11 +1062,11 @@ t clr
 : clr
 ${ac_uA}PACKAGE_NAME${ac_uB}PACKAGE_NAME${ac_uC}"TiEmu"${ac_uD}
 ${ac_uA}PACKAGE_TARNAME${ac_uB}PACKAGE_TARNAME${ac_uC}"tiemu"${ac_uD}
-${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"1.80-041010"${ac_uD}
-${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"TiEmu 1.80-041010"${ac_uD}
+${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"1.80-041013"${ac_uD}
+${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"TiEmu 1.80-041013"${ac_uD}
 ${ac_uA}PACKAGE_BUGREPORT${ac_uB}PACKAGE_BUGREPORT${ac_uC}"tilp-users@lists.sourceforge.net"${ac_uD}
 ${ac_uA}PACKAGE${ac_uB}PACKAGE${ac_uC}"tiemu"${ac_uD}
-${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"1.80-041010"${ac_uD}
+${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"1.80-041013"${ac_uD}
 ${ac_uA}STDC_HEADERS${ac_uB}STDC_HEADERS${ac_uC}1${ac_uD}
 ${ac_uA}HAVE_SYS_TYPES_H${ac_uB}HAVE_SYS_TYPES_H${ac_uC}1${ac_uD}
 ${ac_uA}HAVE_SYS_STAT_H${ac_uB}HAVE_SYS_STAT_H${ac_uC}1${ac_uD}
