@@ -5,6 +5,9 @@ To do:
 	- link port is broken (HW2 only ?!)
 	- stealth I/O and mem protect (done but not enabled)
 
+- 13/10/2004, version 1.80d: roms
+	- fixed some Linux bugs: directory creation in $HOME.
+	
 - 11/10/2004, version 1.80c: roms
 	- applied patch from Christian Walther <cwalther@gmx.ch>
 	- fixed some Linux bugs
